k8_elk_logging/dist/k8s/k8s_elasticsearch_deploy_def.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch-deploy
  namespace: k8-common
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch-pod
        image: docker.elastic.co/elasticsearch/elasticsearch:7.9.2
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
---


kind: Service
apiVersion: v1
metadata:
  name: elasticsearch-svc
  namespace: k8-common
spec:
  ports:
    - name: http
      port: 9200
      targetPort: 9200
    - name: transport
      port: 9300
      targetPort: 9300
  selector:
    app: elasticsearch
