k8_elk_logging/dist/k8s/k8s_kibana_deploy_def.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: kibana
  name: kibana-deploy
  namespace: k8-common
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana-pod
        image: docker.elastic.co/kibana/kibana:7.9.2
        ports:
        - containerPort: 5601
          protocol: TCP
---


kind: Service
apiVersion: v1
metadata:
  name: kibana-svc
  namespace: k8-common
spec:
  ports:
    - port: 5601
      targetPort: 5601
  selector:
    app: kibana
