k8_elk_logging/dist/k8s/k8s_elasticsearch_ingress_def.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: elasticsearch-ingress
  namespace: k8-common
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - http:
      paths:
      - path: /es/?(.*)
        backend:
          serviceName: elasticsearch-svc
          servicePort: 9200
